add otel metrics integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,33 @@ services:
     networks:
       - app_network
 
+  otel-collector:
+    image: otel/opentelemetry-collector-contrib:latest
+    container_name: otel-collector
+    command: [ "--config=/etc/otel-collector-config.yml" ]
+    volumes:
+      - ./otel-collector-config.yml:/etc/otel-collector-config.yml
+    ports:
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP HTTP receiver
+      - "8889:8889"   # Prometheus metrics
+    depends_on:
+      - jaeger
+    networks:
+      - app_network
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "16686:16686" # Jaeger UI
+      - "14250:14250" # Jaeger gRPC (necessário para OTLP)
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    networks:
+      - app_network
+
+
 networks:
   app_network:
     driver: bridge
