--- a/env.yaml
+++ b/env.yaml
@@ -8,3 +8,8 @@ DB_SSL_MODE: disable
 DB_MAX_IDLE_CONNECTIONS: 10
 DB_MAX_OPEN_CONNECTIONS: 100
 DB_MAX_LIFETIME_CONNECTIONS: 5
+
+# Rate Limiter Configuration
+RATE_LIMITER_REQUESTS_PER_SECOND: 10
+RATE_LIMITER_BURST_SIZE: 20
+RATE_LIMITER_CLEANUP: 5
