add JWT authentication and token generation

--- a/env.yaml
+++ b/env.yaml
@@ -13,3 +13,8 @@ DB_MAX_LIFETIME_CONNECTIONS: 5
 RATE_LIMITER_REQUESTS_PER_SECOND: 10
 RATE_LIMITER_BURST_SIZE: 20
 RATE_LIMITER_CLEANUP: 5
+
+# JWT Configuration
+JWT_SECRET: secret-key-fake-123456789
+JWT_EXPIRATION_HOURS: 24
+
